Finished draft website.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             <div class="picture">
                 <img src="brad-pitt-hair.jpg">
             </div>
-            <div class="picture brad-shadow"></div>
+            <div class="picture brad-shadow">
+                <p>500 W 5th St. Winston, NC</p>
+            </div>
             <div class="logo">
                 <img src="house-icon-transparent.png">
             </div>
